--- a/src/app/home/components/header/header.component.scss
+++ b/src/app/home/components/header/header.component.scss
@@ -1,6 +1,12 @@
 $search-bar-background-color: #dadada;
 $search-bar-height: 2.5em;
-$search-bar-none: none;
+$search-bar-border: none;
+
+.search-bar {
+    background-color: #dadada;
+    height: 2.5em;
+    border: none;
+}
 
 .header {
     max-width: 100%;
@@ -12,27 +18,27 @@ $search-bar-none: none;
     color: white;
     margin-left: 2%;
     padding: 0.8em;
-    width:23%
+    width: 23%;
 }
 
 .search-box {
     width: 75%;
     height: $search-bar-height;
     display: inline-block;
-    border: $search-bar-none;
+    border: $search-bar-border;
 }
 
 .search-button {
     width: 10%;
     height: $search-bar-height;
-    border: $search-bar-none;
+    border: $search-bar-border;
     background-color: $search-bar-background-color;
 }
 
 .dropdown {
     width: 15%;
     height: $search-bar-height;
-    border: $search-bar-none;
+    border: $search-bar-border;
     background-color: $search-bar-background-color;
     font-weight: 600;
 }
@@ -45,16 +51,16 @@ $search-bar-none: none;
     margin: 1.7em 0.2em 0 0;
 
     h5 {
-        display: inline-block;
-        a {
-            text-decoration: none;
-            color: white;
-        }
+            display: inline-block;
+            a {
+                    text-decoration: none;
+                    color: white;
+                }
     }
 
     .user-icon {
         margin-right: 0.4em;
-        padding:  0.2em;
+        padding: 0.2em;
         font-size: 1.3em;
     }
 }
@@ -64,8 +70,9 @@ $search-bar-none: none;
     margin-top: 1.7em;
     margin-left: 1em;
 
+
     .list-item {
-        color: white;
+        color:white;
         list-style-type: none;
         display: inline-block;
         font-size: 1.3em;
