--- a/src/app/home/components/products/products.component.html
+++ b/src/app/home/components/products/products.component.html
@@ -9,4 +9,7 @@
             <p><app-ratings [score]="product.ratings"></app-ratings></p>
         </div>
     </div>
+    <div *ngIf="!productsStore.products.length">
+        No products found
+    </div>
 </div>
