--- a/src/app/home/components/header/header.component.html
+++ b/src/app/home/components/header/header.component.html
@@ -26,7 +26,7 @@
   
       <div class="login-container p-0">
         <fa-icon class="user-icon" [icon]="faUserCircle"></fa-icon>
-        <h5><a href="#">Sign in</a></h5>
+        <h5><a routerLink="signup">Sign in / Join</a></h5>
         /
         <h5><a href="#">Register</a></h5>
       </div>
