Connect sign up form to API

--- a/src/app/home/components/users/user-signup/user-signup.component.html
+++ b/src/app/home/components/users/user-signup/user-signup.component.html
@@ -103,6 +103,19 @@
                     Join
                 </button>
             </div>
+
+            <div 
+                class="alert"
+                [ngClass]="
+                    alertType === 0 
+                    ? 'alert-success'
+                    : alertType === 1
+                    ? 'alert-warning'
+                    : 'alert-danger'
+                "
+                *ngIf="alertMessage !== ''">
+                {{alertMessage}}
+            </div>
         </div>
     </form>
 </div>
