--- a/src/app/home/components/header/header.component.html
+++ b/src/app/home/components/header/header.component.html
@@ -43,6 +43,7 @@
               Hi {{userName}}
           </button>
           <ul class="dropdown-menu">
+            <li><a class="dropdown-item" (click)="pastOrders()">PastOrders</a></li>
             <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
           </ul>
         </div>
