--- a/src/app/home/components/pastorders/pastorders.component.html
+++ b/src/app/home/components/pastorders/pastorders.component.html
@@ -3,14 +3,14 @@
     <div class="col-sm-3">
         <select name="" id="" class="form-select" (change)="selectOrder($event)">
             <option value="0" selected>Please select value</option>
-            <option value="1">Order 1</option>
-            <option value="2">Order 2</option>
-            <option value="3">Order 3</option>
+            <option *ngFor="let pastOrder of pastOrders" value="{{pastOrder.orderId}}">
+                {{ pastOrder.orderId }} Date: {{ pastOrder.orderDate }}
+            </option>
         </select>
     </div>
 </div>
 
-<div class="row my-5 fc-main-div">
+<div class="row my-5 fc-main-div" *ngIf="pastOrder">
     <div class="col-8 p-4">
         <div class="row order-item-card" *ngFor="let product of pastOrderProducts">
             <div class="col-4">
